[package]
name = "pyth-feed-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyth-sdk-solana = "0.8.0"
solana-program = ">= 1.9, <= 1.16"
solana-client = ">= 1.9, <= 1.16"
crossterm = "0.27.0"
anyhow = "1.0.75"
